Changed number of bullets

--- a/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -281,18 +281,18 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/ReloadUI/W_Ammo_HUD.W_Ammo_HUD
 OpenAssetsAtExit=/Game/ReloadUI/W_SingleAmmo.W_SingleAmmo
+OpenAssetsAtExit=/Game/ReloadUI/W_Ammo_HUD.W_Ammo_HUD
 OpenAssetsAtExit=/Game/ReloadUI/BPI_Ammo.BPI_Ammo
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ReloadUI/396331__nioczkus__1911-reload
-MRUItem1=/Game/ReloadUI/ReloadSFX
-MRUItem2=/Game/ReloadUI/BPI_Ammo
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/ReloadUI/BPI_Ammo
+MRUItem2=/Game/ReloadUI/W_Ammo_HUD
 MRUItem3=/Game/ReloadUI/W_SingleAmmo
-MRUItem4=/Game/ReloadUI/W_Ammo_HUD
-MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem4=/Game/ReloadUI/396331__nioczkus__1911-reload
+MRUItem5=/Game/ReloadUI/ReloadSFX
 MRUItem6=/Game/FirstPerson/Blueprints/BP_Rifle
 
 [DetailCategories]
@@ -711,6 +711,9 @@ SoundWave.Voice Management=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
 K2Node_InputTouch.Input=True
+W_Ammo_HUD_C.Default=True
+W_Ammo_HUD_C.Designer=True
+W_Ammo_HUD_C.Layout=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle=1
@@ -854,7 +857,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=336.000
-WindowSize=X=1280.000 Y=720.000
+WindowSize=X=1281.600 Y=721.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1778,5 +1781,10 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PluginBrowser]
+InstalledPlugins=Bridge
+InstalledPlugins=XRVisualization
 
