--- a/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -280,10 +280,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ReloadUI/W_Ammo_HUD.W_Ammo_HUD
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/ReloadUI/W_SingleAmmo.W_SingleAmmo
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ReloadUI/BPI_Ammo
@@ -1104,7 +1101,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=336.000
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2028,8 +2025,8 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PluginBrowser]
 InstalledPlugins=Bridge
