--- a/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -280,20 +280,26 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ReloadUI/Materials/M_Test
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/ReloadUI/BPI_Ammo
-MRUItem3=/Game/ReloadUI/PackSFX
-MRUItem4=/Game/ReloadUI/W_SingleAmmo
-MRUItem5=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem6=/Game/ReloadUI/W_Ammo_HUD
-MRUItem7=/Game/ReloadUI/396331__nioczkus__1911-reload
-MRUItem8=/Game/ReloadUI/ReloadSFX
-MRUItem9=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem1=/Game/ReloadUI/Materials/M_Test_5
+MRUItem2=/Game/ReloadUI/Materials/M_Test_4
+MRUItem3=/Game/ReloadUI/Materials/M_Test_3
+MRUItem4=/Game/ReloadUI/Materials/M_Test_2
+MRUItem5=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
+MRUItem6=/Game/ReloadUI/Materials/M_Test
+MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem8=/Game/ReloadUI/BPI_Ammo
+MRUItem9=/Game/ReloadUI/PackSFX
+MRUItem10=/Game/ReloadUI/W_SingleAmmo
+MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem12=/Game/ReloadUI/W_Ammo_HUD
+MRUItem13=/Game/ReloadUI/396331__nioczkus__1911-reload
+MRUItem14=/Game/ReloadUI/ReloadSFX
+MRUItem15=/Game/FirstPerson/Blueprints/BP_Rifle
 
 [DetailCategories]
 BP_Rifle_C.Default=True
@@ -981,6 +987,72 @@ MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionScalarParameter.CustomPrimitiveData=True
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+BP_FirstPersonProjectile_C.Tick=True
+BP_FirstPersonProjectile_C.Replication=True
+BP_FirstPersonProjectile_C.Rendering=True
+BP_FirstPersonProjectile_C.Collision=True
+BP_FirstPersonProjectile_C.Actor=True
+BP_FirstPersonProjectile_C.Input=True
+BP_FirstPersonProjectile_C.HLOD=True
+BP_FirstPersonProjectile_C.WorldPartition=True
+BP_FirstPersonProjectile_C.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle=1
@@ -992,6 +1064,12 @@ MaterialExpressionMultiply.MaterialExpression=True
 /Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode=1
 /Game/ReloadUI/PackSFX.PackSFX=1
 /Game/ReloadUI/Materials/M_Test.M_Test=1
+/Game/FPWeapon/Mesh/FirstPersonProjectileMesh.FirstPersonProjectileMesh=1
+/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile=1
+/Game/ReloadUI/Materials/M_Test_2.M_Test_2=1
+/Game/ReloadUI/Materials/M_Test_3.M_Test_3=1
+/Game/ReloadUI/Materials/M_Test_4.M_Test_4=1
+/Game/ReloadUI/Materials/M_Test_5.M_Test_5=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2063,12 +2141,11 @@ InstalledPlugins=Bridge
 InstalledPlugins=XRVisualization
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [MaterialEditor]
-PrimType=2
+PrimType=1
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
