--- a/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -224,7 +224,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bi
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ReloadUI/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserDrawer.SourcesExpanded=True
@@ -280,8 +280,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile.BP_FirstPersonProjectile
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
@@ -1209,7 +1208,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=336.000
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
