--- a/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -224,7 +224,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bi
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/VFX/Textures
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserDrawer.SourcesExpanded=True
@@ -260,8 +260,8 @@ ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.342112184
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.557887614
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
@@ -281,24 +281,30 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/VFX/NiagraSystems/FXS_Dust.FXS_Dust
+OpenAssetsAtExit=/Game/VFX/Materials/M_FX.M_FX
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem1=/Game/ReloadUI/Materials/M_Test_5
-MRUItem2=/Game/ReloadUI/Materials/M_Test_4
-MRUItem3=/Game/ReloadUI/Materials/M_Test_3
-MRUItem4=/Game/ReloadUI/Materials/M_Test_2
-MRUItem5=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
-MRUItem6=/Game/ReloadUI/Materials/M_Test
-MRUItem7=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem8=/Game/ReloadUI/BPI_Ammo
-MRUItem9=/Game/ReloadUI/PackSFX
-MRUItem10=/Game/ReloadUI/W_SingleAmmo
-MRUItem11=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem12=/Game/ReloadUI/W_Ammo_HUD
-MRUItem13=/Game/ReloadUI/396331__nioczkus__1911-reload
-MRUItem14=/Game/ReloadUI/ReloadSFX
-MRUItem15=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem0=/Game/VFX/Materials/M_FX
+MRUItem1=/Game/VFX/NiagraSystems/FXS_Dust
+MRUItem2=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/FPWeapon/Mesh/SK_FPGun
+MRUItem6=/Game/FPWeapon/Materials/M_FPGun_2
+MRUItem7=/Game/ReloadUI/Materials/M_Test_5
+MRUItem8=/Game/ReloadUI/Materials/M_Test_4
+MRUItem9=/Game/ReloadUI/Materials/M_Test_3
+MRUItem10=/Game/ReloadUI/Materials/M_Test_2
+MRUItem11=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
+MRUItem12=/Game/ReloadUI/Materials/M_Test
+MRUItem13=/Game/ReloadUI/BPI_Ammo
+MRUItem14=/Game/ReloadUI/PackSFX
+MRUItem15=/Game/ReloadUI/W_SingleAmmo
+MRUItem16=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
+MRUItem17=/Game/ReloadUI/W_Ammo_HUD
+MRUItem18=/Game/ReloadUI/396331__nioczkus__1911-reload
+MRUItem19=/Game/ReloadUI/ReloadSFX
 
 [DetailCategories]
 BP_Rifle_C.Default=True
@@ -1052,9 +1058,83 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Animation=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+BP_Rifle_C.TransformCommon=True
+BP_FirstPersonCharacter_C.TransformCommon=True
+BP_FirstPersonCharacter_C.Animation=True
+BP_FirstPersonCharacter_C.Mesh=True
+BP_FirstPersonCharacter_C.Clothing=True
+BP_FirstPersonCharacter_C.Physics=True
+BP_FirstPersonCharacter_C.MasterPoseComponent=True
+BP_FirstPersonCharacter_C.Lighting=True
+BP_FirstPersonCharacter_C.AnimationRig=True
+BP_FirstPersonCharacter_C.Deformer=True
+BP_FirstPersonCharacter_C.SkinWeights=True
+BP_FirstPersonCharacter_C.Navigation=True
+BP_FirstPersonCharacter_C.VirtualTexture=True
+BP_FirstPersonCharacter_C.Tags=True
+BP_FirstPersonCharacter_C.Activation=True
+BP_FirstPersonCharacter_C.Cooking=True
+BP_FirstPersonCharacter_C.Character Movement (General Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Walking=True
+BP_FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_FirstPersonCharacter_C.Character Movement (Networking)=True
+BP_FirstPersonCharacter_C.Character Movement: Swimming=True
+BP_FirstPersonCharacter_C.Character Movement: Flying=True
+BP_FirstPersonCharacter_C.Character Movement: Custom Movement=True
+BP_FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_FirstPersonCharacter_C.Character Movement=True
+BP_FirstPersonCharacter_C.Character Movement: Avoidance=True
+BP_FirstPersonCharacter_C.RootMotion=True
+BP_FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_FirstPersonCharacter_C.NavMovement=True
+BP_FirstPersonCharacter_C.Velocity=True
+BP_FirstPersonCharacter_C.PlanarMovement=True
+BP_FirstPersonCharacter_C.MovementComponent=True
+BP_FirstPersonCharacter_C.Shape=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Niagara=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Materials=True
+NiagaraActor.Compilation=True
+NiagaraActor.HLOD=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.WorldPartition=True
+NiagaraActor.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
-/Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle=1
+/Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle=0
 /Game/ReloadUI/ReloadSFX.ReloadSFX=0
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
 /Game/ReloadUI/W_Ammo_HUD.W_Ammo_HUD=0
@@ -1069,6 +1149,10 @@ StaticMeshComponent.Events=True
 /Game/ReloadUI/Materials/M_Test_3.M_Test_3=1
 /Game/ReloadUI/Materials/M_Test_4.M_Test_4=1
 /Game/ReloadUI/Materials/M_Test_5.M_Test_5=1
+/Game/FPWeapon/Mesh/SK_FPGun.SK_FPGun=1
+/Game/FPWeapon/Materials/M_FPGun_2.M_FPGun_2=1
+/Game/VFX/NiagraSystems/FXS_Dust.FXS_Dust=0
+/Game/VFX/Materials/M_FX.M_FX=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1208,7 +1292,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=336.000
-WindowSize=X=1286.400 Y=726.400
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2129,6 +2213,10 @@ ExternalImagePicker.TimeStamp=2022.08.17-16.26.02
 ExternalImagePicker.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2022.08.17-16.26.06
 SequencerWidgets.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2022.05.02-06.06.40
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2022.05.02-06.06.38
+PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2202,4 +2290,43 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+
+[PlacementMode]
+RecentlyPlaced=/Game/VFX/NiagraSystems/FXS_Dust.FXS_Dust;
 
