--- a/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterProto/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -222,9 +222,10 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bi
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Pack,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.NewActionMapping_0,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/VFX/Textures
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Particles
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserDrawer.SourcesExpanded=True
@@ -281,30 +282,31 @@ LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/VFX/NiagraSystems/FXS_Dust.FXS_Dust
-OpenAssetsAtExit=/Game/VFX/Materials/M_FX.M_FX
+OpenAssetsAtExit=/Game/StarterContent/Particles/P_Explosion2.P_Explosion2
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VFX/Materials/M_FX
-MRUItem1=/Game/VFX/NiagraSystems/FXS_Dust
-MRUItem2=/Game/FirstPerson/Blueprints/BP_Rifle
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem5=/Game/FPWeapon/Mesh/SK_FPGun
-MRUItem6=/Game/FPWeapon/Materials/M_FPGun_2
-MRUItem7=/Game/ReloadUI/Materials/M_Test_5
-MRUItem8=/Game/ReloadUI/Materials/M_Test_4
-MRUItem9=/Game/ReloadUI/Materials/M_Test_3
-MRUItem10=/Game/ReloadUI/Materials/M_Test_2
-MRUItem11=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
-MRUItem12=/Game/ReloadUI/Materials/M_Test
-MRUItem13=/Game/ReloadUI/BPI_Ammo
-MRUItem14=/Game/ReloadUI/PackSFX
-MRUItem15=/Game/ReloadUI/W_SingleAmmo
-MRUItem16=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode
-MRUItem17=/Game/ReloadUI/W_Ammo_HUD
-MRUItem18=/Game/ReloadUI/396331__nioczkus__1911-reload
-MRUItem19=/Game/ReloadUI/ReloadSFX
+MRUItem0=/Game/StarterContent/Particles/P_Explosion2
+MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem2=/Game/StarterContent/Particles/P_Sparks
+MRUItem3=/Game/FirstPerson/Blueprints/BP_Rifle
+MRUItem4=/Game/ReloadUI/Materials/M_Bullet
+MRUItem5=/Game/ReloadUI/BulletIcon
+MRUItem6=/Game/VFX/NiagraSystems/FXS_Dust
+MRUItem7=/Game/VFX/Materials/M_FX
+MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonProjectile
+MRUItem9=/Game/FPWeapon/Mesh/SK_FPGun
+MRUItem10=/Game/FPWeapon/Materials/M_FPGun_2
+MRUItem11=/Game/ReloadUI/Materials/M_Test_5
+MRUItem12=/Game/ReloadUI/Materials/M_Test_4
+MRUItem13=/Game/ReloadUI/Materials/M_Test_3
+MRUItem14=/Game/ReloadUI/Materials/M_Test_2
+MRUItem15=/Game/FPWeapon/Mesh/FirstPersonProjectileMesh
+MRUItem16=/Game/ReloadUI/Materials/M_Test
+MRUItem17=/Game/ReloadUI/BPI_Ammo
+MRUItem18=/Game/ReloadUI/PackSFX
+MRUItem19=/Game/ReloadUI/W_SingleAmmo
 
 [DetailCategories]
 BP_Rifle_C.Default=True
@@ -1132,6 +1134,68 @@ NiagaraActor.Actor=True
 MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
 MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
 MaterialExpressionTextureSample.MaterialExpression=True
+NiagaraActor.NiagaraComponent_Parameters=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleColorOverLife.Color=True
+ParticleModuleColorOverLife.Cascade=True
+ParticleModuleSubUV.SubUV=True
+ParticleModuleSubUV.Realtime=True
+ParticleModuleSubUV.Cascade=True
+ParticleModuleLight.Light=True
+ParticleModuleLight.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+ParticleModuleRotation.Rotation=True
+ParticleModuleRotation.Cascade=True
+ParticleModuleSizeMultiplyLife.Size=True
+ParticleModuleSizeMultiplyLife.Cascade=True
+ParticleModuleAccelerationConstant.ParticleModuleAccelerationConstant=True
+ParticleModuleAccelerationConstant.Cascade=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_Rifle.BP_Rifle=0
@@ -1153,6 +1217,10 @@ MaterialExpressionTextureSample.MaterialExpression=True
 /Game/FPWeapon/Materials/M_FPGun_2.M_FPGun_2=1
 /Game/VFX/NiagraSystems/FXS_Dust.FXS_Dust=0
 /Game/VFX/Materials/M_FX.M_FX=0
+/Game/ReloadUI/Materials/M_Bullet.M_Bullet=1
+/Game/ReloadUI/BulletIcon.BulletIcon=1
+/Game/StarterContent/Particles/P_Sparks.P_Sparks=1
+/Game/StarterContent/Particles/P_Explosion2.P_Explosion2=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1204,13 +1272,34 @@ EditorStyleSettings=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleSubUV="\"Object.SubUV.SubImageIndex.Distribution\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleSubUVBase="\"Object.SubUV.SubImageIndex.Distribution\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.SubUV.SubImageIndex.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleLight="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
+ParticleModuleLightBase="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleRotation="\"Object.Rotation.StartRotation.Distribution\" "
+ParticleModuleRotationBase="\"Object.Rotation.StartRotation.Distribution\" "
+ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1277,6 +1366,7 @@ MovieRendererName=
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
 EdGraph.Graph=False
+BP_FirstPersonCharacter_C.Tick=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2217,11 +2307,17 @@ SkeletonEditor.TimeStamp=2022.05.02-06.06.40
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.05.02-06.06.38
 PinnedCommandList.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.08.17-16.26.06
+TextureEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2022.08.17-16.25.57
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2022.08.17-16.26.00
+DistCurveEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PluginBrowser]
 InstalledPlugins=Bridge
@@ -2329,4 +2425,40 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX/NiagraSystems/FXS_Dust.FXS_Dust;
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-45.000000 Y=180.000000 R=0.000000
+
+[SuppressableDialogs]
+DeleteComponentInUse_Warning=False
 
